// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Table/HeaderCell WithAttributes play-test 1`] = `
<div data-test-block="true">
  <table>
    <thead>
      <tr class>
        <th id="htmlId"
            class="_headerCell_wql7r_1 _headerCell_standard_wql7r_1  _headerCell_left_wql7r_51 dummyClassname"
            lang="nb"
            data-testid="123ID"
        >
          cake
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Tester/Table/HeaderCell WithChildren play-test 1`] = `
<div data-test-block="true">
  <table>
    <thead>
      <tr class>
        <th class="_headerCell_wql7r_1 _headerCell_standard_wql7r_1  _headerCell_left_wql7r_51">
          columnheader
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Tester/Table/HeaderCell WithRef play-test 1`] = `
<div data-test-block="true">
  <table>
    <thead>
      <tr class>
        <th class="_headerCell_wql7r_1 _headerCell_standard_wql7r_1  _headerCell_left_wql7r_51"
            id="dummyIdForwardedFromRef"
        >
          cake
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
